test/corpus/calculus.txt
==================
Logarithms
==================

loge(6+6)-log(e^2)+ln(x**2+2)/log30(6)

---

(expression
  (addition
    left: (subtraction
      left: (natural_logarithm
        argument: (addition
          left: (number)
          right: (number)))
      right: (natural_logarithm
        argument: (exponential
          base: (symbol)
          exponent: (number))))
    right: (division
      left: (natural_logarithm
        argument: (addition
          left: (exponential
            base: (symbol)
            exponent: (number))
          right: (number)))
      right: (logarithm
        base: (number)
        argument: (number)))))

==================
Absolute Value
==================

abs(7x^3+7-ln(4))**abs(-4)

---

(expression
  (exponential
    base: (absolute_value
      argument: (subtraction
        left: (addition
          left: (exponential
            base: (coeff_variable
              coefficient: (number)
              variable: (symbol))
            exponent: (number))
          right: (number))
        right: (natural_logarithm
          argument: (number))))
    exponent: (absolute_value
      argument: (number))))

==================
Roots
==================

sqrt(45x)+root3(38y)*root2(2)

---

(expression
  (addition
    left: (square_root
      argument: (coeff_variable
        coefficient: (number)
        variable: (symbol)))
    right: (product
      left: (nth_root
        degree: (number)
        argument: (coeff_variable
          coefficient: (number)
          variable: (symbol)))
      right: (square_root
        argument: (number)))))

==================
Limits
==================

limx->5(4x*4)=limx->5-(6)

---

(expression
  (equals
    left: (limit
      variable: (symbol)
      point: (number)
      function: (product
        left: (coeff_variable
          coefficient: (number)
          variable: (symbol))
        right: (number)))
    right: (limit
      variable: (symbol)
      point: (number)
      (side)
      function: (number))))

==================
Derivatives
==================

d/dx5x=5

---

(expression
  (equals
    left: (derivative
      variable: (symbol)
      function: (coeff_variable
        coefficient: (number)
        variable: (symbol)))
    right: (number)))

==================
Rolle's Theorem
==================

c=rolle(x^2,[2;4])

---

(expression
  (equals
    left: (symbol)
    right: (rolle
      function: (exponential
        base: (symbol)
        exponent: (number))
      interval: (interval
        (left_bracket)
        left: (number)
        right: (number)
        (right_bracket)))))

==================
Lagrange's Theorem
==================

c=lagrange(x^2,[2;4])

---

(expression
  (equals
    left: (symbol)
    right: (lagrange
      function: (exponential
        base: (symbol)
        exponent: (number))
      interval: (interval
        (left_bracket)
        left: (number)
        right: (number)
        (right_bracket)))))
