test/corpus/formulas.txt
==================
Quadratic Formula
==================

x=(-b+-sqrt(b^2-4ac))/2a

---

(expression
  (equals
    left: (symbol)
    right: (division
      left: (plus_minus
        left: (coeff_variable
          variable: (symbol))
        right: (square_root
          argument: (subtraction
            left: (exponential
              base: (symbol)
              exponent: (number))
            right: (coeff_variable
              coefficient: (coeff_variable
                coefficient: (number)
                variable: (symbol))
              variable: (symbol)))))
      right: (coeff_variable
        coefficient: (number)
        variable: (symbol)))))

==================
Absolute Value Piecewise Function
==================

piecewise({x,x>=0},{-x,x<0})

---

(expression
  (piecewise
    cases: (cases
      (case
        function: (symbol)
        interval: (more_than_equals
          left: (symbol)
          right: (number)))
      (case
        function: (coeff_variable
          variable: (symbol))
        interval: (less_than
          left: (symbol)
          right: (number))))))
