test/corpus/trigonometric.txt
==================
Sine
==================

sin(x)=sinx

---

(expression
  (equals
    left: (sine
      argument: (symbol))
    right: (sine
      argument: (symbol))))

==================
Cosine
==================

cos(x)=cosx

---

(expression
  (equals
    left: (cosine
      argument: (symbol))
    right: (cosine
      argument: (symbol))))

==================
Tangent
==================

tan(x)=tanx

---

(expression
  (equals
    left: (tangent
      argument: (symbol))
    right: (tangent
      argument: (symbol))))

==================
Cosecant
==================

csc(x)=cscx

---

(expression
  (equals
    left: (cosecant
      argument: (symbol))
    right: (cosecant
      argument: (symbol))))

==================
Secant
==================

sec(x)=secx

---

(expression
  (equals
    left: (secant
      argument: (symbol))
    right: (secant
      argument: (symbol))))

==================
Cotangent
==================

cot(x)=cotx

---

(expression
  (equals
    left: (cotangent
      argument: (symbol))
    right: (cotangent
      argument: (symbol))))

==================
Arcsine
==================

arcsin(x)=arcsinx

---

(expression
  (equals
    left: (arcsine
      argument: (symbol))
    right: (arcsine
      argument: (symbol))))

==================
Arcosine
==================

arccos(x)=arccosx

---

(expression
  (equals
    left: (arccosine
      argument: (symbol))
    right: (arccosine
      argument: (symbol))))

==================
Arctangent
==================

arctan(x)=arctanx

---

(expression
  (equals
    left: (arctangent
      argument: (symbol))
    right: (arctangent
      argument: (symbol))))

==================
Arccosecant
==================

arccsc(x)=arccscx

---

(expression
  (equals
    left: (arccosecant
      argument: (symbol))
    right: (arccosecant
      argument: (symbol))))

==================
Arcsecant
==================

arcsec(x)=arcsecx

---

(expression
  (equals
    left: (arcsecant
      argument: (symbol))
    right: (arcsecant
      argument: (symbol))))

==================
Arccotangent
==================

arccot(x)=arccotx

---

(expression
  (equals
    left: (arccotangent
      argument: (symbol))
    right: (arccotangent
      argument: (symbol))))
